...
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:visibility="gone"
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
...
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="10dp"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_tracking"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/btn_text_start"
...
