...
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_new_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
...
